--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="site-wrap">
     <header>
-      <div class="top">header</div>
+      <div class="top">Serena's Test Web</div>
     </header>
 
     <div class="banner">
@@ -19,26 +19,51 @@
         <div class="col-md-4">
           <div class="title">Home Page</div>
           <div class="subtitle">
-            <ul>
-              <span class="list-title">MY TO LEARN LIST</span> 
-              <li>
-                CSS
-                <div class="row">
-                  <div class="col"><span class="item">Bootstrap</span></div>
-                  <div class="col"><span class="item">layouts</span></div>
-                  <div class="col"><span class="item">RWD</span></div>
-                </div>
-              </li>
-              <li>
-                JavaScript
-                <div class="row">
-                  <div class="col"><span class="item">Vue.js</span></div>
-                  <div class="col"><span class="item">Vue.js</span></div>
-                  <div class="col"><span class="item">Form & Validation</span></div>
-                  <div class="col"><span class="item">Ajax</span></div>
-                </div>
-              </li>
-            </ul>
+            <table>
+              <span class="list-title">MY TO-LEARN-LIST</span> 
+              <tbody>
+                <tr class="sub-title">
+                  <td>CSS</td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Bootstrap</td>
+                  <td>Layouts</td>
+                  <td>RWD</td>
+                </tr>
+                <tr class="sub-title">
+                  <td>JavaScript</td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Vue.js</td>
+                  <td>Form & Validation</td>
+                  <td>Ajax</td>
+                </tr>
+                <tr class="sub-title">
+                  <td>Python</td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>web sockets</td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr class="sub-title">
+                  <td>Others</td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>git</td>
+                  <td>sql</td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
         <div class="col-md-8">
@@ -48,6 +73,7 @@
     </div>
 
     <div class="content">
+      
     </div>
 
   </div>
